[project]
name = "experiment"
version = "0.1.0"
description = "Python langchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "langchain_core",
    "langmem-cloudflare-vectorize",
    "langgraph-checkpoint-cloudflare-d1",
    "langchain-cloudflare"
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
