[project]
name = "experiment"
version = "0.1.0"
description = "Python langchain Cloudflare Worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-openai"
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
